--- a/数学/やさしく学べる線形代数.md
+++ b/数学/やさしく学べる線形代数.md
@@ -1,3 +1,18 @@
+# 概要
+
+```
+やさしく学べる線形代数  
+石村 園子著　
+ISBN	
+978-4-320-01660-6
+判型	A5
+ページ数	224ページ
+発行年月	2000年10月
+本体価格	2,000円
+```
+https://www.kyoritsu-pub.co.jp/kenpon/bookDetail/9784320016606
+
+
 # 目次
 
 ```
